kube-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-optimization-agents-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql-optimization-agents
  template:
    metadata:
      labels:
        app: sql-optimization-agents
    spec:
      containers:
        - name: sql-optimization-agents
          image: us-central1-docker.pkg.dev/gd-gcp-rnd-analytical-platform/adp-rnd-gcp/sql-optimization-agents:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8880
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: sql-optimization-agents-service
  namespace: default
spec:
  selector:
    app: sql-optimization-agents
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8880
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sql-optimization-agents-ingress
  namespace: default
  annotations:
    spec.ingressClassName: gce
spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sql-optimization-agents-service
                port:
                  number: 80
